fixed odin img header from spilling when screensize minimized

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body {
 }
 
 .image-sidebar {
-  width: 35%;
+  width: 30%;
+  min-width: 30%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,10 +21,11 @@ body {
 .fern-background {
   width: 100%;
   height: inherit;
+  z-index: -1;
 }
 
 .odin-header {
-  margin-top: 12%;
+  margin-top: 10%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -31,16 +33,16 @@ body {
   position: fixed;
   background: rgb(0 0 0 / 40%);
   width: inherit;
-  height: 20%;
+  height: 16%;
 }
 
 .odin-logo {
-  width: 80px;
+  width: 60px;
 }
 
 .odin-logo-text {
   font-family: 'Norse-Bold', Serif;
-  font-size: 5em;
+  font-size: 4em;
   display: flex;
   color: white;
 }
@@ -62,7 +64,7 @@ a {
 }
 
 content {
-  padding-left: 50px;
+  padding-left: 30px;
 }
 
 h4 {
